--- a/.github/workflows/reminder.yaml
+++ b/.github/workflows/reminder.yaml
@@ -2,7 +2,7 @@ name: Send Message to Telegram
 
 on:
   schedule:
-    - cron: '5 9 * * 6'  # 每周六早上 9:05 执行
+    - cron: '16 8 14,28 * *'  # 每月的 14 号和 28 号早上 8 点 16 分执行
   workflow_dispatch:  # 允许手动触发
 
 jobs:
